updated book chapter entries.

--- a/Publications.html
+++ b/Publications.html
@@ -621,6 +621,18 @@ A. Akbarzadeh, J.-M. Frahm, P. Mordohai, B. Clipp, C. Engels, D. Gallup, P. Merr
 <h2 id="bookchapters">Book Chapters</h2>
 
 <p class="paperheading">
+Vergence
+[<a href="https://www.springer.com/gp/book/9783030634155">link</a>] </p>
+Sudipta N. Sinha<br>
+Computer Vision, A Reference Guide, K. Ikeuchi (Eds.), Springer, 2021<br> <p></p>
+
+<p class="paperheading">
+Occlusion
+[<a href="https://www.springer.com/gp/book/9783030634155">link</a>] </p>
+Sudipta N. Sinha<br>
+Computer Vision, A Reference Guide, K. Ikeuchi (Eds.), Springer, 2021<br> <p></p>
+
+<p class="paperheading">
 A Memory Efficient Discriminative Approach for Location-Aided Recognition
 [<a href="https://rd.springer.com/chapter/10.1007%2F978-3-319-25781-5_15">pdf</a>] </p>
 S. N. Sinha, V. Hedau, C. L. Zitnick and R. Szeliski<br>
@@ -792,7 +804,7 @@ Granted, January 13, 2015<br> <p></p>
 
 <div id="footer-box">
 <hr>
-Last updated: July 29, 2019
+Last updated: November 20, 2020
 </div>
 
 </body></html>
