--- a/Activities.html
+++ b/Activities.html
@@ -32,7 +32,7 @@
 
 <p class="paperheading">Organizing, Service
 <ul>
-<li>Senior Program Committee memmber, IJCAI 2021</li>
+<li>Senior Program Committee member, IJCAI 2021</li>
 <li>Area Chair, International Conference on 3D Vision (3DV) 2020</li>
 <li>Senior Program Committee member, IJCAI-PRICAI 2020</li>
 <li>Area Chair, International Conference on 3D Vision (3DV) 2019</li>
