typo fix; added new patent filings.

--- a/Publications.html
+++ b/Publications.html
@@ -422,7 +422,7 @@ Sena Kiciroglu, Helge Rhodin, Sudipta N. Sinha, Mathieu Salzmann and Pascal Fua<
 <p>
 <span class="paperheading">Piecewise Planar Stereo for Image-based Rendering</span>
 <span class="authors">Sudipta N. Sinha, Drew Steedly and Rick Szeliski</span>
-<span class="booktitle">International Conference on Computer Vision (ICCV 2019)</span> 
+<span class="booktitle">International Conference on Computer Vision (ICCV 2009)</span> 
 [<a href="pdfs/SinhaICCV2009.pdf">pdf</a>]
 </p>
 
@@ -669,6 +669,12 @@ Computational Vision in Neural and Machine Systems, L. Harris and M. Jenkins (Ed
 <h2 id = "patents">Patents</h2>
 
 <p class="paperheading">
+Spatially Consistent Representation of Hand Motion
+[<a href="https://patents.justia.com/patent/20200311397">20200311397</a>] </p>
+Marc Pollefeys, Sudipta N. Sinha, Harpreet S. Sawhney, B. Tekin, F. Bogo<br>
+Publication, October 1, 2020<br> <p></p>
+
+<p class="paperheading">
 Camera Pose Estimation using Obfuscated Features
 [<a href="https://patents.justia.com/patent/20200126256">20200126256</a>] </p>
 Sudipta N. Sinha, Marc Pollefeys, Sing Bing Kang, Pablo Speciale<br>
@@ -679,6 +685,13 @@ Device Pose Estimation using 3D Line Clouds
 [<a href="https://patents.justia.com/patent/20200005486">20200005486</a>] </p>
 Sudipta N. Sinha, Pablo Speciale, Sing Bing Kang, Marc Pollefeys<br>
 Publication, January 2, 2020<br> <p></p>
+
+<p class="paperheading">
+Fusing disparity proposals in stereo matching
+[<a href="
+https://patents.justia.com/patent/20190362514">20190362514</a>] </p>
+Johannes L. Schoenberger, Sudipta N. Sinha, Marc Pollefeys<br>
+Publication, Nov 28, 2019<br> <p></p>
 
 <p class="paperheading">
 Optimal Scanning Trajectories for 3D Scenes 
