updated publication list.

--- a/Publications.html
+++ b/Publications.html
@@ -51,14 +51,14 @@
 <p>
 <span class="paperheading">PatchMatch-Based Neighborhood Consensus for Semantic Correspondence</span>
 <span class="authors">Jae Yong Lee, Joseph Degol, Victor Fragoso and Sudipta N. Sinha</span>
-<span class="booktitle">CVPR 2021</span>
+<span class="booktitle">CVF/IEEE Conference on Computer Vision and Pattern Recognition (CVPR 2021)</span>
 <!--[<a href="pdfs/LeeCVPR2021.pdf">pdf </a>]&nbsp[<a href="pdfs/LeeCVPR2021supp.pdf">supplementary pdf</a>]-->
 </p>
 
 <p>
 <span class="paperheading">Privacy-Preserving Image Features via Adversarial Affine Subspace Embeddings</span>
 <span class="authors">Mihai Dusmanu, Johannes L. Schönberger, Sudipta N. Sinha and Marc Pollefeys</span>
-<span class="booktitle">CVPR 2021</span>
+<span class="booktitle">CVF/IEEE Conference on Computer Vision and Pattern Recognition (CVPR 2021)</span>
 <!--[<a href="pdfs/FragosoSinha3DV2020.pdf">pdf</a>]&nbsp[<a href="pdfs/FragosoSinha3DV2020.pdf">supplementary pdf</a>]-->
 </p>
 
