--- a/Publications.html
+++ b/Publications.html
@@ -83,7 +83,7 @@
 <p>
 <span class="paperheading">Privacy-Preserving Visual Feature Descriptors through Adversarial Affine Subspace Embedding</span>
 <span class="authors">Mihai Dusmanu, Johannes L. Schönberger, Sudipta N. Sinha, Marc Pollefeys</span>
-<span class="booktitle">arXiv draft (paper under review)</span>
+<span class="booktitle">arXiv draft</span>
 [<a href="https://arxiv.org/abs/2006.06634">link</a>]
 </p>
 
