--- a/Publications.html
+++ b/Publications.html
@@ -59,7 +59,7 @@
 <span class="paperheading">Privacy-Preserving Image Features via Adversarial Affine Subspace Embeddings</span>
 <span class="authors">Mihai Dusmanu, Johannes L. Schönberger, Sudipta N. Sinha and Marc Pollefeys</span>
 <span class="booktitle">CVF/IEEE Conference on Computer Vision and Pattern Recognition (CVPR 2021)</span>
-<a href="pdfs/DusmanuCVPR2021.pdf">pdf</a>]&nbsp[<a href="pdfs/DusmanuCVPR2021_supp.pdf">supplementary pdf</a>]
+[<a href="pdfs/DusmanuCVPR2021.pdf">pdf</a>]&nbsp[<a href="pdfs/DusmanuCVPR2021_supp.pdf">supplementary pdf</a>]
 </p>
 
 
