--- a/Publications.html
+++ b/Publications.html
@@ -46,6 +46,15 @@
 <br><br>
 
 <!-------------------------------------------------------------->
+<h3>2022</h3>
+<p>
+<span class="paperheading">Learning to Detect Scene Landmarks for Camera Localization</span>
+<span class="authors">Tien Do, Ondrej Miksik, Joseph DeGol, Hyun Soo Park, Sudipta N. Sinha</span>
+<span class="booktitle">CVF/IEEE Conference on Computer Vision and Pattern Recognition (CVPR 2022)</span>
+[<a href="https://github.com/microsoft/SceneLandmarkLocalization/blob/main/paper/FINAL.pdf">pdf </a>]&nbsp[<a href="https://github.com/microsoft/SceneLandmarkLocalization">project page</a>]
+</p>
+
+<!-------------------------------------------------------------->
 <h3>2021</h3>
 
 <p>
