--- a/Others.html
+++ b/Others.html
@@ -108,6 +108,8 @@
 
 <ul>
 
+<li>Towards Storage Efficient and Privacy-Preserving Camera Localization in Pre-Mapped Environments, <br>Invited talk, <a href="">5th International Workshop on Visual Odometry and Computer Vision Applications Based on Location Clues (CVPR Workshop)</a>, June 2022 [<a href="https://sites.google.com/view/vocvalc2022/speakers#h.kr7imvqvxrof">pdf</a>].</li><br>
+
 <li>Towards Privacy-Preserving Spatial AI, <br>Invited talk, <a href="https://researchweek.wsu.edu/advancing-ai/">Advancing AI @ WSU summit</a>, October 2020 [<a href="https://snsinha.github.io/talks/10142020_AdvancingAI_WSU_talk_slides.pdf">pdf</a>].</li><br>
 
 <li>Project FarmBeats: Aerial Mapping for Agricultural Farms and Beyond, <br>Invited talk, 
