--- a/Publications.html
+++ b/Publications.html
@@ -46,6 +46,15 @@
 <br><br>
 
 <!-------------------------------------------------------------->
+<h3>2023</h3>
+<p>
+<span class="paperheading">Self-supervised Learning with Local Contrastive Loss for Detection and Semantic Segmentation</span>
+<span class="authors">Ashraful Islam, Benjamin Lundell, Harpreet Sawhney, Sudipta N. Sinha, Peter Morales, Richard Radke</span>
+<span class="booktitle">IEEE/CVF Winter Conference on Applications of Computer Vision (WACV 2023)</span>
+[<a href="https://arxiv.org/pdf/2207.04398.pdf">pdf</a>]
+</p>
+
+<!-------------------------------------------------------------->
 <h3>2022</h3>
 <p>
 <span class="paperheading">Learning to Detect Scene Landmarks for Camera Localization</span>
