updated paper list and bio

--- a/Publications.html
+++ b/Publications.html
@@ -56,6 +56,14 @@
 
 <!-------------------------------------------------------------->
 <h3>2022</h3>
+
+<p>
+<span class="paperheading">Optimizing Fiducial Marker Placement for Improved Visual Localization</span>
+<span class="authors">Qiangqiang Huang, Joseph DeGol, Victor Fragoso, Sudipta N. Sinha, John J. Leonard</span>
+<span class="booktitle">arXiv draft</span>
+[<a href="https://arxiv.org/abs/2211.01513">link</a>]
+</p>
+
 <p>
 <span class="paperheading">Learning to Detect Scene Landmarks for Camera Localization</span>
 <span class="authors">Tien Do, Ondrej Miksik, Joseph DeGol, Hyun Soo Park, Sudipta N. Sinha</span>
