--- a/Activities.html
+++ b/Activities.html
@@ -49,15 +49,15 @@
 
 <p class="paperheading">Conference Program Committee
 <ul>
-<li>NeurIPS, 2020.</li>
-<li>AAAI Conference on Artificial Intelligence, 2019.</li>
-<li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) 2009 — 2020.</li>
-<li>IEEE International Conference on Computer Vision (ICCV) 2009 — 2019.</li>
-<li>European Conference on Computer Vision (ECCV) 2008 — 2020.</li>
+<li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) 2009 — 2023.</li>
+<li>IEEE International Conference on Computer Vision (ICCV) 2009 — 2021.</li>
+<li>European Conference on Computer Vision (ECCV) 2008 — 2022.</li>
+<li>Asian Conference on Computer Vision (ACCV) 2009 — 2018.</li>
 <li>British Machine Vision Conference (BMVC) 2017 — 2019.</li>
 <li>3D Processing, Visualization and Transmission (3DPVT 2012, 3DV 2013 — 2015).</li>
-<li>Asian Conference on Computer Vision (ACCV) 2009 — 2018.</li>
 <li>Indian Conference on Vision, Graphics and Image Processing (ICVGIP) 2010, 2012, 2014, 2016.</li>
+<li>NeurIPS, 2020.</li>
+<li>AAAI Conference on Artificial Intelligence, 2019.</li>
 <li>ACM Multimedia Conference 2016.</li>
 </ul>
 </p>
@@ -103,16 +103,13 @@
 <li>SIGGRAPH 2008–-2018</li> 
 <li>SIGGRAPH Asia 2009–-2012, 2016</li>
 <li>EuroGraphics 2012, 2014, 2015, 2016</li>
-<li>ICRA 2015, 2016, 2020</li>
+<li>ICRA 2015, 2016, 2020, 2021, 2023</li>
 <li>IROS 2016, 2018, 2020</li>
 <li>CoRL 2017</li>
 </ul>
 </p>
 
-
-
 </div>
-
 
 <div id="footer-box">
 <hr>
