project page updated.

--- a/Research.html
+++ b/Research.html
@@ -36,6 +36,23 @@
 
 <tr class="spaceUnder">
 <td style="width: 20%">
+<img alt="" src="img/Do-etal-CVPR22_300w.png" width="130"></td>
+<td style="width: 80%">
+<span class="textStyle">
+<strong>
+Learning to Detect Scene Landmarks for Camera Localization</strong><br>
+<a href="http://cvpr2022.thecvf.com/">CVPR 2022</a><br>
+<font size = 2>
+Modern camera localization methods that use image retrieval, feature matching, and 3D structure-based pose estimation require long-term storage of numerous scene images or a vast amount of image features. This can make them unsuitable for resource constrained VR/AR devices and also raises privacy concerns. We present a new learned camera localization technique that eliminates the need to store features or a detailed 3D point cloud. Our key idea is to implicitly encode the appearance of a sparse yet salient set of 3D scene points into a convolutional neural network (CNN) that can detect these scene points in query images whenever they are visible. We refer to these points as scene landmarks. We show that a CNN can be trained to regress bearing vectors for such landmarks even when they are not within the cameraâ€™s field-of-view. We demonstrate that the predicted landmarks yield accurate pose estimates and our method outperforms DSAC*, the state-of-the art in learned localization. Furthermore, extending HLoc by combining its correspondences with our predictions boosts its accuracy even further..
+<a href = "https://github.com/microsoft/SceneLandmarkLocalization">...</a>
+</font><br>
+<a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Do_Learning_To_Detect_Scene_Landmarks_for_Camera_Localization_CVPR_2022_paper.pdf"><img src="img/pdf.jpg" width="24"></a>&nbsp;<a href="https://github.com/microsoft/SceneLandmarkLocalization"><img src="img/www.jpg" width="24"></a><br>
+</span>
+</td>
+</tr>
+
+<tr class="spaceUnder">
+<td style="width: 20%">
 <img alt="" src="img/SpecialeICCV2019.jpg" width="130"></td>
 <td style="width: 80%">			
 <span class="textStyle">
