--- a/Publications.html
+++ b/Publications.html
@@ -47,6 +47,14 @@
 
 <!-------------------------------------------------------------->
 <h3>2023</h3>
+
+<p>
+<span class="paperheading">Optimizing Fiducial Marker Placement for Improved Visual Localization</span>
+<span class="authors">Qiangqiang Huang, Joseph DeGol, Victor Fragoso, Sudipta N. Sinha, John J. Leonard</span>
+<span class="booktitle">IEEE Robotics and Automation Letters (RA-L) & IEEE/RSJ IROS, 2023</span>
+[<a href="https://arxiv.org/abs/2211.01513">pdf</a>][][<a href="https://github.com/doublestrong/OMP">code</a>]
+</p>
+
 <p>
 <span class="paperheading">Self-supervised Learning with Local Contrastive Loss for Detection and Semantic Segmentation</span>
 <span class="authors">Ashraful Islam, Benjamin Lundell, Harpreet Sawhney, Sudipta N. Sinha, Peter Morales, Richard Radke</span>
@@ -56,13 +64,6 @@
 
 <!-------------------------------------------------------------->
 <h3>2022</h3>
-
-<p>
-<span class="paperheading">Optimizing Fiducial Marker Placement for Improved Visual Localization</span>
-<span class="authors">Qiangqiang Huang, Joseph DeGol, Victor Fragoso, Sudipta N. Sinha, John J. Leonard</span>
-<span class="booktitle">arXiv draft</span>
-[<a href="https://arxiv.org/abs/2211.01513">link</a>]
-</p>
 
 <p>
 <span class="paperheading">Learning to Detect Scene Landmarks for Camera Localization</span>
