--- a/Publications.html
+++ b/Publications.html
@@ -46,13 +46,22 @@
 <br><br>
 
 <!-------------------------------------------------------------->
+<h3>2024</h3>
+
+<p>
+<span class="paperheading">Improved Scene Landmark Detection for Camera Localization</span>
+<span class="authors">Tien Do, Sudipta N. Sinha</span>
+<span class="booktitle">International Conference on 3D Vision (3DV) 2024 (to appear)</span>
+[<a href="https://arxiv.org">pdf (coming soon!)</a>][<a href="https://github.com">code (coming soon!)</a>]
+</p>
+
 <h3>2023</h3>
 
 <p>
 <span class="paperheading">Optimizing Fiducial Marker Placement for Improved Visual Localization</span>
 <span class="authors">Qiangqiang Huang, Joseph DeGol, Victor Fragoso, Sudipta N. Sinha, John J. Leonard</span>
 <span class="booktitle">IEEE Robotics and Automation Letters (RA-L) & IEEE/RSJ IROS, 2023</span>
-[<a href="https://arxiv.org/abs/2211.01513">pdf</a>][][<a href="https://github.com/doublestrong/OMP">code</a>]
+[<a href="https://arxiv.org/abs/2211.01513">pdf</a>][<a href="https://github.com/doublestrong/OMP">code</a>]
 </p>
 
 <p>
