--- a/Others.html
+++ b/Others.html
@@ -110,8 +110,9 @@
 <p class="paperheading">Talks
 
 <ul>
+<li>Privacy-Preserving Camera Localization in Pre-Mapped Environments, <br>Invited talk, <a href="">Workshop on Privacy-Preserving Computer Vision, (WACV Workshop)</a>, January 2024 [<a href="https://privacy-preserving-computer-vision.github.io/wacv24.html#background">www</a>].</li><br>
 
-<li>Towards Storage Efficient and Privacy-Preserving Camera Localization in Pre-Mapped Environments, <br>Invited talk, <a href="">5th International Workshop on Visual Odometry and Computer Vision Applications Based on Location Clues (CVPR Workshop)</a>, June 2022 [<a href="https://sites.google.com/view/vocvalc2022/speakers#h.kr7imvqvxrof">pdf</a>].</li><br>
+<li>Towards Storage Efficient and Privacy-Preserving Camera Localization in Pre-Mapped Environments, <br>Invited talk, <a href="">5th International Workshop on Visual Odometry and Computer Vision Applications Based on Location Clues (CVPR Workshop)</a>, June 2022 [<a href="https://sites.google.com/view/vocvalc2022/speakers#h.kr7imvqvxrof">www</a>].</li><br>
 
 <li>Towards Privacy-Preserving Spatial AI, <br>Invited talk, <a href="https://researchweek.wsu.edu/advancing-ai/">Advancing AI @ WSU summit</a>, October 2020 [<a href="https://snsinha.github.io/talks/10142020_AdvancingAI_WSU_talk_slides.pdf">pdf</a>].</li><br>
 
