--- a/Others.html
+++ b/Others.html
@@ -64,9 +64,9 @@
 
 <ul>
 
-<li>Privacy-Preserving Localization, <a href="https://sites.google.com/view/lsvl2023/home">Large Scale Visual Localization</a>, CVPR 2023<br>[<a href="https://snsinha.github.io/talks/2023-CVPR-Privacy-Preserving-Localization_Sinha.pdf">pdf</a>]&nbsp; [<a href="https://www.youtube.com/watch?v=RaVPiIGhdWk">video</a>].</li>
+<li>Privacy-Preserving Localization, <a href="https://sites.google.com/view/lsvl2023/home">Large Scale Visual Localization</a>, CVPR 2023<br>[<a href="https://snsinha.github.io/talks/2023-CVPR-Privacy-Preserving-Localization_Sinha.pdf">pdf</a>]&nbsp; [<a href="https://youtu.be/7iRBMWPd7Bc?t=9296">video</a>].</li>
 
-<li>Privacy-Preserving Localization, <a href="https://sites.google.com/view/lsvpr2021/home">Large Scale Visual Localization</a>, ICCV 2021 (virtual)<br>[<a href="https://snsinha.github.io/talks/2021-ICCV-Privacy-Preserving-Localization_Sinha.pdf">pdf</a>]&nbsp; [<a href="https://www.youtube.com/watch?v=RaVPiIGhdWk">video</a>].</li>
+<li>Privacy-Preserving Localization, <a href="https://sites.google.com/view/lsvpr2021/home">Large Scale Visual Localization</a>, ICCV 2021 (virtual)<br>[<a href="https://snsinha.github.io/talks/2021-ICCV-Privacy-Preserving-Localization_Sinha.pdf">pdf</a>]&nbsp; [<a href="https://www.youtube.com/watch?v=RaVPiIGhdWk&t=9566s">video</a>].</li>
 
 <li>3rd Summer School on Computer Vision<a href="http://cvit.iiit.ac.in/cvsummerschool2018/index.html">, Basics OF Modern AI</a>, IIIT Hyderabad, July 2-7, 2018 <br>[<a href="https://snsinha.github.io/talks/2018_IIITH-AISummerSchool_Sinha-2.pdf">part1</a>]&nbsp; [<a href="https://snsinha.github.io/talks/2018_IIITH-AISummerSchool_Sinha-2.pdf">part2</a>].</li>
 
