--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 		<tbody><tr><br>
 			<td style="height: 16px"><span class="headerStyle1">Sudipta N. Sinha<br>
 			</span><span class="headerStyle2">
-			Principal Researcher, Microsoft,<br>Redmond, USA<br><br>
+			Staff Software Engineer, Stack AV,<br><br>
 			</span>
 			
 			<span class="headerStyle2">
-			Research Interests:<br>Computer Vision, Robotics,<br>Computer Graphics, Augmented Reality
+			Research Interests:<br>Computer Vision, Robotics, Computer Graphics
 			<br><br>
 			</span>
 			
@@ -45,12 +45,9 @@
 			<tr>
 			<td>
 			<span class="textStyle"><a href="resume/snsinhaCV.pdf">CV</a></span><br>
-			<span class="textStyle"><a href="http://dblp.uni-trier.de/pers/hd/s/Sinha:Sudipta_N=">DBLP</a></span><br>
 			<span class="textStyle"><a href="https://www.linkedin.com/in/sudipsin">LinkedIn</a></span><br>
-			<span class="textStyle"><a href="https://www.researchgate.net/profile/Sudipta_Sinha8">ResearchGate</a></span><br>
 			<span class="textStyle"><a href="https://scholar.google.com/citations?user=Z6gnDIEAAAAJ&hl=en&oi=ao">Google Scholar</a></span><br>
-			<span class="textStyle"><a href="https://www.microsoft.com/en-us/research/people/sudipsin/">Microsoft</a></span><br>
-			<span class="textStyle">Email: sudipta-dot-sinha-at-microsoft.com</span><br>			
+			<span class="textStyle">Email: sudipta-dot-sinha-at-gmail.com</span><br>
 			</td>
 			<td></td>
 			</tr>
@@ -59,7 +56,7 @@
 
 <div id="footer-box">
 <hr>
-Last updated: July 29, 2019
+Last updated: 12/26/2024
 </div>
 
 </body></html>
