--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <li><a href="./Publications.html">Publications</a></li>
 <li><a href="./Research.html">Research</a></li>
 <li><a href="./Activities.html">Activities</a></li>
-<li><a href="./Others.html">Others</a></li>
+<li><a href="./Others.html">Talks</a></li>
 </ul>
 </div>
 <div class="space">&nbsp;</div>
@@ -33,7 +33,7 @@
 			Staff Software Engineer, Stack AV,<br><br>
 			</span>
 			
-			<span class="headerStyle2">
+			<span class="textStyle">
 			Research Interests:<br>Computer Vision, Robotics, Computer Graphics
 			<br><br>
 			</span>
