--- a/Research.html
+++ b/Research.html
@@ -19,7 +19,7 @@
 <li><a href="./Publications.html">Publications</a></li>
 <li><a href="./Research.html">Research</a></li>
 <li><a href="./Activities.html">Activities</a></li>
-<li><a href="./Others.html">Others</a></li>
+<li><a href="./Talks.html">Others</a></li>
 </ul>
 </div>
 
