--- a/Others.html
+++ b/Others.html
@@ -40,7 +40,7 @@
 
 <li><a href="./Activities.html">Activities</a></li>
 
-<li><a href="./Talks.html">Others</a></li>
+<li><a href="./Others.html">Talks</a></li>
 
 </ul>
 
