--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<tbody><tr><br>
 			<td style="height: 16px"><span class="headerStyle1">Sudipta N. Sinha<br>
 			</span><span class="headerStyle2">
-			Staff Software Engineer, Stack AV,<br><br>
+			Staff Software Engineer, Stack AV<br><br>
 			</span>
 			
 			<span class="textStyle">
