--- a/Publications.html
+++ b/Publications.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta content="ja" http-equiv="Content-Language">
 
 <link href="./css/index.css" rel="stylesheet" type="text/css">
 <style type="text/css">
@@ -19,7 +18,7 @@
 <li><a href="./Publications.html">Publications</a></li>
 <li><a href="./Research.html">Research</a></li>
 <li><a href="./Activities.html">Activities</a></li>
-<li><a href="./Talks.html">Others</a></li>
+<li><a href="./Others.html">Talks</a></li>
 </ul>
 </div>
 
